--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <!-- CHATBOT -->
+    <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+    <script
+      src="https://mediafiles.botpress.cloud/38cf576d-4ce0-486a-a791-1225419e5680/webchat/config.js"
+      defer
+    ></script>
   </body>
 </html>
